--- a/blocks/basic/CMakeLists.txt
+++ b/blocks/basic/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(gr4-basic-blocks INTERFACE)
-target_link_libraries(gr4-basic-blocks INTERFACE gnuradio-core gnuradio-algorithm)
+target_link_libraries(gr4-basic-blocks INTERFACE gnuradio-core)
 target_include_directories(gr4-basic-blocks INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/> $<INSTALL_INTERFACE:include/>)
+
+add_subdirectory(test)
