Add network host to devcontainer
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,9 @@
   "build": {
     "dockerfile": "../docker/Dockerfile"
   },
+  "runArgs": [
+    "--network=host"
+  ],
   "customizations": {
     "vscode": {
       "settings": {
