--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,11 +3,12 @@ LABEL authors="akrimm"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update -q  && apt-get install --no-install-recommends -qy wget gpg ca-certificates software-properties-common 
-RUN apt-get install --no-install-recommends -qy    bash file locales build-essential sudo cmake git make ninja-build cppzmq-dev libfftw3-dev meson ninja-build 
-RUN apt-get install --no-install-recommends -qy    clang-18 clang-tools-18 clang-20 clang-tools-20 libc++-20-dev libc++abi-20-dev gdb lldb-20 gcc-14 g++-14 gcc-15 g++-15 
-RUN apt-get install --no-install-recommends -qy    ccache mold 
-RUN apt-get install --no-install-recommends -qy    python3-dev pybind11-dev libgtest-dev python3-numpy
+RUN apt-get update -q  && apt-get install --no-install-recommends -qy wget gpg ca-certificates software-properties-common \
+    bash file locales build-essential sudo cmake git make ninja-build cppzmq-dev libfftw3-dev meson ninja-build \
+    clang-18 clang-tools-18 clang-20 clang-tools-20 libc++-20-dev libc++abi-20-dev gdb lldb-20 gcc-14 g++-14 gcc-15 g++-15 \
+    ccache mold \
+    python3-dev pybind11-dev libgtest-dev python3-numpy pkg-config \
+    && rm -rf /var/lib/apt/lists/*
 
 
 RUN locale-gen en_US.UTF-8 && echo 'LANG="en_US.UTF-8"'>/etc/default/locale \
@@ -33,24 +34,25 @@ WORKDIR /opt/gnuradio4
 RUN mkdir build && cd build && \
     #cmake -G Ninja -DCMAKE_BUILD_TYPE=RelWithAssert -DGR_ENABLE_BLOCK_REGISTRY=OFF -DENABLE_TESTING=OFF -DENABLE_EXAMPLES=OFF .. && \
     cmake -G Ninja -DCMAKE_BUILD_TYPE=RelWithAssert -DGR_ENABLE_BLOCK_REGISTRY=ON -DENABLE_TESTING=OFF -DENABLE_EXAMPLES=OFF .. && \
-    ninja -j8 && ninja install
+    ninja -j8 && ninja install && cp /opt/gnuradio4/build/core/libgnuradio-blocklib-core.so /usr/local/lib/ \
+    && find /opt/gnuradio4/blocks -type d -name 'gnuradio-4.0' -exec cp -r {} /usr/local/include/ \;
 
-# # This is a complete hack until GR4.0 repo installs to right places
-# RUN mkdir /usr/local/include/gnuradio-4.0 \
-#     && cp -r /opt/gnuradio4/core/include/gnuradio-4.0 /usr/include/ \
-#     && cp -r /opt/gnuradio4/meta/include/gnuradio-4.0 /usr/local/include/ \
-#     && cp /opt/gnuradio4/third_party/magic_enum/*.hpp /usr/local/include/ \
-#     && cp /opt/gnuradio4/build/core/include/gnuradio-4.0/config.hpp /usr/local/include/gnuradio-4.0/
-RUN ls /opt/gnuradio4/build/core/
-RUN cp /opt/gnuradio4/build/core/libgnuradio-blocklib-core.so /usr/local/lib/ 
 
-# Install all the headers
-RUN find /opt/gnuradio4/blocks -type d -name 'gnuradio-4.0' -exec cp -r {} /usr/local/include/ \;
+# Copy your source tree (assume it lives next to Dockerfile)
+COPY . /opt/gr4-incubator
 
-# Add additional dependencies for this OOT module
-RUN apt-get install --no-install-recommends -qy pkg-config
+# Define build argument with default (empty means don't build by default)
+ARG BUILD_ACTIVE_PROJECT=
+ENV BUILD_ACTIVE_PROJECT=${BUILD_ACTIVE_PROJECT}
 
-RUN rm -rf /var/lib/apt/lists/*
+# Conditionally build and install if set
+RUN if [ "$BUILD_ACTIVE_PROJECT" = "1" ]; then \
+      cd /opt/gr4-incubator && meson setup build --libdir=/usr/local/lib && cd build && ninja && ninja install && rm -rf /opt/gr4-incubator; \
+    else \
+      echo "Skipping active project build/install"; \
+    fi
+
+RUN 
 
 RUN echo "ubuntu ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/ubuntu
 USER ubuntu
