--- a/blocks/basic/meson.build
+++ b/blocks/basic/meson.build
@@ -28,8 +28,13 @@ gr4_basic_blocks_dep = declare_dependency(
 #   error('You must run bootstrap_plugins.sh before meson setup!')
 # endif
 
+if get_option('enable_plugins')
 subdir('plugin')
+endif
+# subdir('examples')
+if get_option('enable_testing')
 subdir('test')
+endif
 
 
 pkgconfig = import('pkgconfig')
@@ -41,6 +46,7 @@ pkgconfig.generate(
 )
 
 #TODO - build into plugin generator
+if get_option('enable_plugins')
 pkgconfig.generate(
   Gr4BasicBlocks_shared,
   name : 'gnuradio4-basic',
@@ -48,4 +54,5 @@ pkgconfig.generate(
   version : meson.project_version(),
   subdirs: 'gnuradio-4.0/basic',
 )
+endif
 
