--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,4 @@
 option('enable_testing', type : 'boolean', value : true, yield : false)
 option('enable_plugins', type : 'boolean', value : false, yield : false)
+option('enable_examples', type : 'boolean', value : true, yield : false)
 option('warnings_as_errors', type : 'boolean', value : false, description : 'treat compiler warnings as errors')
