--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,11 +8,19 @@ RUN apt-get update -q  && apt-get install --no-install-recommends -qy wget gpg c
     clang-20 clang-tools-20 libc++-20-dev libc++abi-20-dev gdb lldb-20 gcc-15 g++-15 \
     ccache mold \
     python3-dev pybind11-dev libgtest-dev python3-numpy pkg-config \
+    libsoapysdr-dev soapysdr-tools soapysdr-module-all \
+    uhd-host libuhd-dev usbutils libusb-dev \
     libasound2-dev \
     libpulse-dev \
     libjack-jackd2-dev jackd2 \
     pulseaudio-utils alsa-utils libasound2-plugins \
     && rm -rf /var/lib/apt/lists/*
+
+# UHD: download only B200 images and install udev rules
+ENV UHD_IMAGES_DIR=/usr/share/uhd/images
+RUN mkdir -p /etc/udev/rules.d/ \
+    && uhd_images_downloader --refetch \
+    && cp /usr/libexec/uhd/utils/uhd-usrp.rules /etc/udev/rules.d/
 
 
 RUN locale-gen en_US.UTF-8 && echo 'LANG="en_US.UTF-8"'>/etc/default/locale \
@@ -68,5 +76,3 @@ RUN echo "ubuntu ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/ubuntu
 USER ubuntu
 WORKDIR /code
 ENTRYPOINT ["/bin/bash", "-l", "-c"]
-
-
