--- a/examples/meson.build
+++ b/examples/meson.build
@@ -27,6 +27,14 @@ if soapysdr_dep.found()
   deps += soapysdr_dep
 endif
 
+imgui_proj = subproject('imgui', default_options: ['opengl=enabled', 'glfw=enabled'])
+imgui_dep = imgui_proj.get_variable('imgui_dep')
+
+implot_proj = subproject('implot')
+implot_dep = implot_proj.get_variable('implot_dep')
+glfw_dep = dependency('glfw3', required: true, method: 'pkg-config')
+opengl_dep = dependency('opengl', required: true)
+
 exe = executable('fm_demodulator', 'fm_demodulator.cpp',
   install : true,
   include_directories: inc_dirs,
@@ -36,3 +44,8 @@ exe = executable('fm_demodulator_cli', 'fm_demodulator_cli.cpp',
   install : true,
   include_directories: inc_dirs,
   dependencies: deps + [dependency('ncurses', required: true)])
+
+exe = executable('fm_demodulator_imgui', 'fm_demodulator_imgui.cpp',
+  install : true,
+  include_directories: inc_dirs,
+  dependencies: deps + [imgui_dep, implot_dep, glfw_dep, opengl_dep])
