Update to latest fair-acc/gnuradio4 API
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/.devcontainer/devcontainer.json.example
+++ b/.devcontainer/devcontainer.json.example
@@ -3,7 +3,7 @@
   // "build": {
   //   "dockerfile": "../docker/Dockerfile"
   // },
-  "image": "ghcr.io/mormj/gr4-oot-env:latest",
+  "image": "ghcr.io/mormj/gr4-oot-env:fair",
   
   // Give the container access to network + audio
   "runArgs": [
