--- a/blocks/audio/examples/meson.build
+++ b/blocks/audio/examples/meson.build
@@ -1,6 +1,5 @@
 inc_dirs = '../include'
 
-pmt_conv_dep = dependency('pmt_converter', required: true)
 zmq_dep = dependency('cppzmq', required: true)
 rtaudio_dep = dependency('rtaudio', required: true)
 
@@ -12,5 +11,5 @@ rtaudio_dep = dependency('rtaudio', required: true)
 exe = executable('audio_playback', 'audio_playback.cpp',
   install : true,
   include_directories: inc_dirs,
-  dependencies: [gr4_dep, gr4_blocklib_dep, gr4_zmq_blocks_dep, pmt_conv_dep, zmq_dep, cli11_dep, rtaudio_dep])
+  dependencies: [gr4_dep, gr4_blocklib_dep, gr4_zmq_blocks_dep, zmq_dep, cli11_dep, rtaudio_dep])
 
